--- a/views/index.html
+++ b/views/index.html
@@ -10,14 +10,45 @@
     <title>El Mateador</title>
 </head>
 <body>
-    <header> 
-
+    <header class="header--main"> 
+            <div class="header__div--logo">
+                <a href="http://localhost:3043/"><img  class="header--logo" src="/images/logo.jpg" alt="grupo5"></a>
+            </div>
     </header>
+   
     <main> 
 
     </main>
-    <footer> 
-        
-    </footer>    
+    
+    
+    <footer class="footer">
+        <section class="footer__article"> 
+            <h4>Nuestras redes</h4>
+            <p class="footer__section--pNets">Seguinos en nuetras redes sociales:</p>
+            <div class="footer__section--div">
+                <a href="#" class="footer__section--nets">
+                <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a href="#" class="footer__section--nets">
+                    <i class="fa-brands fa-square-facebook"></i>
+                </a>
+                <a href="#" class="footer__section--nets">
+                    <i class="fa-brands fa-tiktok"></i>
+                </a>
+            </div>
+        </section>
+            
+        <section class="footer__article"> 
+            <h4>¿Dónde estamos?</h4>
+            <a href="#" class="footer__section--location">
+                <i class="fa-solid fa-location-dot footer__section--iconLocation"></i>
+                <p class="footer__section--pLocation ">EL MATEADOR </p>
+            </a>
+        </section>    
+
+        <section> 
+                <p class="footer--author">Copyright El Mateador - Grupo 5 - 2024 / Proyecto Digital House -</p>
+        </section>
+    </footer>  
 </body>
 </html>
