--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -10,14 +10,80 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <header> 
-
+    <header class="header--main"> 
+            <div class="header__div--logo">
+                <a href="http://localhost:3043/"><img  class="header--logo" src="/images/logo.jpg" alt="grupo5"></a>
+            </div>
     </header>
     <main> 
+        <div class="foto-de-producto">
+            <img src="/public/images/el-mateador-imagenes-01.jpg">
+        </div>
+        <br>
+        <div class="version-en-colores">
+            <img src="/public/images/el-mateador-imagenes-02.jpg">
+            <img src="/public/images/el-mateador-imagenes-03.jpg">
+            <img src="/public/images/el-mateador-imagenes-04.jpg">
+        </div>
+    <br>
+    <p class="">Nombre del producto</p>
+    <br>
+    <p class="">$3.500</p>
+    <br>
+    <label for="color">Color:</label>
+        <select name="color" id="color">
+            <option value="rosa">Rosa</option>
+            <option value="verde">Verde</option>
+            <option value="blanco">Blanco</option>
+        </select>
+    <label for="color">Cantidad:</label>
+        <select name="color" id="color">
+            <option value="rosa"></option>
+            <option value="verde">Verde</option>
+            <option value="blanco">Blanco</option>
+        </select>
+    
+    <div class="main__continuar">
+            <button class="main__continuar--button">Comprar ahora</button>
+    </div>
+    <div class="main__continuar">
+        <button class="main__continuar--button">Agregar al carrito</button>
+    </div>
+    <br>
+    <div>
+        <h4>Mas detalles</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo incidunt eaque doloribus rerum, vero itaque quam commodi perspiciatis esse, autem temporibus asperiores laboriosam! Sint est quam cumque dolore, consequuntur impedit.</p>
+    </div>    
 
     </main>
-    <footer> 
-        
-    </footer>
+    <footer class="footer">
+        <section class="footer__article"> 
+            <h4>Nuestras redes</h4>
+            <p class="footer__section--pNets">Seguinos en nuetras redes sociales:</p>
+            <div class="footer__section--div">
+                <a href="#" class="footer__section--nets">
+                <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a href="#" class="footer__section--nets">
+                    <i class="fa-brands fa-square-facebook"></i>
+                </a>
+                <a href="#" class="footer__section--nets">
+                    <i class="fa-brands fa-tiktok"></i>
+                </a>
+            </div>
+        </section>
+            
+        <section class="footer__article"> 
+            <h4>¿Dónde estamos?</h4>
+            <a href="#" class="footer__section--location">
+                <i class="fa-solid fa-location-dot footer__section--iconLocation"></i>
+                <p class="footer__section--pLocation ">EL MATEADOR </p>
+            </a>
+        </section>    
+
+        <section> 
+                <p class="footer--author">Copyright El Mateador - Grupo 5 - 2024 / Proyecto Digital House -</p>
+        </section>
+    </footer>  
 </body>
 </html>
