--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -1,68 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalle Producto</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="\css\normalize.css">
+    <link rel="stylesheet" href="\css\styles.css">
 </head>
+
 <body>
-    <header class="header--main"> 
-            <div class="header__div--logo">
-                <a href="http://localhost:3043/"><img  class="header--logo" src="/images/logo.jpg" alt="grupo5"></a>
-            </div>
+    <header class="header--main">
+        <div class="header__div--logo">
+            <a href="http://localhost:3043/"><img class="header--logo" src="\images\banner1.jpg" alt="grupo5"></a>
+        </div>
     </header>
-    <main> 
-        <div class="foto-de-producto">
-            <img src="/public/images/el-mateador-imagenes-01.jpg">
+    <main>
+        <div class="images__products">
+            <img class="image__product" src="/images/el-mateador-imagenes-01.jpg" alt="el-mateador-imagenes-01" />
+            <img class="image__product" src="/images/el-mateador-imagenes-02.jpg" alt="el-mateador-imagenes-02">
+            <img class="image__product" src="/images/el-mateador-imagenes-03.jpg" alt="el-mateador-imagenes-03">
+            <img class="image__product" src="/images/el-mateador-imagenes-04.jpg" alt="el-mateador-imagenes-04">
         </div>
-        <br>
-        <div class="version-en-colores">
-            <img src="/public/images/el-mateador-imagenes-02.jpg">
-            <img src="/public/images/el-mateador-imagenes-03.jpg">
-            <img src="/public/images/el-mateador-imagenes-04.jpg">
-        </div>
-    <br>
-    <p class="">Nombre del producto</p>
-    <br>
-    <p class="">$3.500</p>
-    <br>
-    <label for="color">Color:</label>
+        <p class="titles">Nombre del producto</p>
+        <p class="price">$3.500</p>
+        <label class="color label" for="color">Color:</label>
         <select name="color" id="color">
+            <option value="negro">Negro</option>
             <option value="rosa">Rosa</option>
             <option value="verde">Verde</option>
             <option value="blanco">Blanco</option>
         </select>
-    <label for="color">Cantidad:</label>
+        <label class="cantidad label" for="color">Cantidad:</label>
         <select name="color" id="color">
-            <option value="rosa"></option>
-            <option value="verde">Verde</option>
-            <option value="blanco">Blanco</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="3">4</option>
+            <option value="3">5</option>
         </select>
-    
-    <div class="main__continuar">
+
+        <div class="main__continuar">
             <button class="main__continuar--button">Comprar ahora</button>
-    </div>
-    <div class="main__continuar">
-        <button class="main__continuar--button">Agregar al carrito</button>
-    </div>
-    <br>
-    <div>
-        <h4>Mas detalles</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo incidunt eaque doloribus rerum, vero itaque quam commodi perspiciatis esse, autem temporibus asperiores laboriosam! Sint est quam cumque dolore, consequuntur impedit.</p>
-    </div>    
+        </div>
+        <div class="main__continuar">
+            <button class="main__continuar--button">Agregar al carrito</button>
+        </div>
+        <div>
+            <h4 class="titles details">Mas detalles</h4>
+            <ul class="product__details">
+                <li>Calabaza ergonómica y duradera para un agarre cómodo y auténtico disfrute.</li>
+                <li>Detalles resistentes en acero inoxidable que aportan un toque moderno y aseguran durabilidad.</li>
+                <li>Diseño único que combina tradición y sofisticación, realzando la belleza natural de la calabaza.
+                </li>
+            </ul>
+        </div>
 
     </main>
     <footer class="footer">
-        <section class="footer__article"> 
+        <section class="footer__article">
             <h4>Nuestras redes</h4>
             <p class="footer__section--pNets">Seguinos en nuetras redes sociales:</p>
             <div class="footer__section--div">
                 <a href="#" class="footer__section--nets">
-                <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-instagram"></i>
                 </a>
                 <a href="#" class="footer__section--nets">
                     <i class="fa-brands fa-square-facebook"></i>
@@ -72,18 +77,18 @@
                 </a>
             </div>
         </section>
-            
-        <section class="footer__article"> 
-            <h4>¿Dónde estamos?</h4>
-            <a href="#" class="footer__section--location">
-                <i class="fa-solid fa-location-dot footer__section--iconLocation"></i>
-                <p class="footer__section--pLocation ">EL MATEADOR </p>
-            </a>
-        </section>    
 
-        <section> 
-                <p class="footer--author">Copyright El Mateador - Grupo 5 - 2024 / Proyecto Digital House -</p>
+        <section class="footer__article">
+            <h4>¿Dónde estamos?</h4>
+            <a href="#" class="footer__section--location"></a>
+                <i class="fa-solid fa-location-dot footer__section--iconLocation"></i><p>Calle Falsa 1234</p>
+                <p class="footer__section--pLocation">EL MATEADOR </p>
+            
         </section>
-    </footer>  
+        <section>
+            <p class="footer--author">Copyright El Mateador - Grupo 5 - 2024 / Proyecto Digital House -</p>
+        </section>
+    </footer>
 </body>
+
 </html>
