--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -26,7 +26,7 @@
             <img class="image__product" src="/images/el-mateador-imagenes-03.jpg" alt="el-mateador-imagenes-03">
             <img class="image__product" src="/images/el-mateador-imagenes-04.jpg" alt="el-mateador-imagenes-04">
         </div>
-        <p class="titles">Nombre del producto</p>
+        <p class="titles">Mate camionero Patricio Rey</p>
         <p class="price">$3.500</p>
         <label class="color label" for="color">Color:</label>
         <select name="color" id="color">
@@ -80,11 +80,12 @@
 
         <section class="footer__article">
             <h4>¿Dónde estamos?</h4>
-            <a href="#" class="footer__section--location"></a>
-                <i class="fa-solid fa-location-dot footer__section--iconLocation"></i><p>Calle Falsa 1234</p>
-                <p class="footer__section--pLocation">EL MATEADOR </p>
-            
+            <a href="#" class="footer__section--location">
+                <i class="fa-solid fa-location-dot footer__section--iconLocation"></i>
+                <p class="footer__section--pLocation ">EL MATEADOR </p>
+            </a>
         </section>
+
         <section>
             <p class="footer--author">Copyright El Mateador - Grupo 5 - 2024 / Proyecto Digital House -</p>
         </section>
