--- a/views/index.html
+++ b/views/index.html
@@ -10,16 +10,155 @@
     <title>El Mateador</title>
 </head>
 <body>
-    <header class="header--main"> 
-            <div class="header__div--logo">
-                <a href="http://localhost:3043/"><img  class="header--logo" src="/images/logo.jpg" alt="grupo5"></a>
+    <header class="header--main">
+        <div class="header__main--bar">
+
+            <div class="header__div--burger">
+                <i class="fa-solid fa-bars"></i>
             </div>
+
+            <div class="header__div--logo">
+                <a href="/"><img  class="header--logo" src="/images/logo.jpg" alt="Mates"></a>
+            </div>
+
+            <div class="header__div--cart">
+                <a href="/productCart"><i class="fa-solid fa-shopping-cart"></i></a>
+            </div>
+
+        </div>                   
     </header>
    
-    <main> 
-
-    </main>
+  
+    <main class="main--home">
+        <div class="main--banner">
+            <img  class="banner"  src="/images/banner-el-mateador_Mesa de trabajo 1.jpg" alt="banner">
+            <div class="banner--radios">
+                <input type="radio" name="formBanner" value="mainBanner" class="main__banner--radio"> 
+                <input type="radio" name="formBanner" value="mainBanner" class="main__banner--radio"> 
+                <input type="radio" name="formBanner" value="mainBanner" class="main__banner--radio"> 
+            </div>
+        </div>
     
+        <section class="main--section">
+            <h3 class="main--titulares">Categorías</h3>
+            <div class="main__section--div4">
+                <div class="main__section--div2">
+                    <article class="main__secction--article">
+                        <div class="section__article--img">
+                            <img class="main__article--img" src="/images/mate1.jpg" alt="Programacion Full Stack">
+                        </div>                        
+                        <div class="article__div--flex">
+                            <p class="section__article--precio"> $6.770</p>
+                            <p class="section__article--descripcion"> Mate Descripcion </p> 
+                        </div>                        
+                    </article>
+
+                    <article class="main__secction--article">
+                        <div class="section__article--img">
+                            <img class="main__article--img" src="/images/mate1.jpg" alt="Programacion Full Stack">
+                        </div>                        
+                        <div class="article__div--flex">
+                            <p class="section__article--precio"> $6.770</p>
+                            <p class="section__article--descripcion"> Mate Descripcion </p> 
+                        </div>                        
+                    </article>
+                </div>
+
+                <div class="main__section--div2">
+                    <article class="main__secction--article">
+                        <div class="section__article--img">
+                            <img class="main__article--img" src="/images/mate1.jpg" alt="Programacion Full Stack">
+                        </div>                        
+                        <div class="article__div--flex">
+                            <p class="section__article--precio"> $6.770</p>
+                            <p class="section__article--descripcion"> Mate Descripcion </p> 
+                        </div>                        
+                    </article>
+                    
+                    <article class="main__secction--article">
+                        <div class="section__article--img">
+                            <img class="main__article--img" src="/images/mate1.jpg" alt="Programacion Full Stack">
+                        </div>                        
+                        <div class="article__div--flex">
+                            <p class="section__article--precio"> $6.770</p>
+                            <p class="section__article--descripcion"> Mate Descripcion </p> 
+                        </div>                        
+                    </article>
+                </div>
+        </section>
+
+        <section class="main--section">
+            <h3 class="main--titulares">Promociones</h3>
+            <article class="main--banner">
+                    <img class="banner" src="/images/banner-el-mateador-02.jpg" alt="Programacion Full Stack">                     
+            </article>
+        </section>
+
+        <section class="main--section">
+            <h3 class="main--titulares">Ofertas exclusivas</h3>
+            <div class="main__section--div4">
+                <div class="main__section--div2">
+                    <article class="main__secction--article">
+                        <div class="section__article--img">
+                            <img class="main__article--img" src="/images/mate1.jpg" alt="Programacion Full Stack">
+                        </div>                        
+                        <div class="article__div--flex">
+                            <p class="section__article--precio"> 40% descuento</p>
+                            <p class="section__article--descripcion"> Descripcion Oferta </p> 
+                        </div>                        
+                    </article>
+
+                    <article class="main__secction--article">
+                        <div class="section__article--img">
+                            <img class="main__article--img" src="/images/mate1.jpg" alt="Programacion Full Stack">
+                        </div>                        
+                        <div class="article__div--flex">
+                            <p class="section__article--precio"> 40% descuento</p>
+                            <p class="section__article--descripcion"> Descripcion Oferta </p> 
+                        </div>                        
+                    </article>
+                </div>
+
+                <div class="main__section--div2">
+                    <article class="main__secction--article">
+                        <div class="section__article--img">
+                            <img class="main__article--img" src="/images/mate1.jpg" alt="Programacion Full Stack">
+                        </div>                        
+                        <div class="article__div--flex">
+                            <p class="section__article--precio"> 40% descuento</p>
+                            <p class="section__article--descripcion"> Descripcion Oferta </p> 
+                        </div>                        
+                    </article>
+                    
+                    <article class="main__secction--article">
+                        <div class="section__article--img">
+                            <img class="main__article--img" src="/images/mate1.jpg" alt="Programacion Full Stack">
+                        </div>                        
+                        <div class="article__div--flex">
+                            <p class="section__article--precio"> 40% descuento</p>
+                            <p class="section__article--descripcion"> Descripcion Oferta </p> 
+                        </div>                        
+                    </article>
+                </div>
+        </section>
+
+        <section class="main--section">
+            <h3 class="main__section--send">¿Por qué elegirnos?</h3>  
+            <div class="main__section--bannerSend">
+                <i class="fa-solid fa-chevron-left main__section--arrow"></i>
+                           
+                <article class="main__section--articleSend">
+                    <a href="#">
+                        <i class="fa-solid fa-truck-fast main__icon--send"></i>
+                    </a>
+                    <h4>Envíos a todo el país</h4>
+                    <p>Tenés envíos gratis a partir de $10000</p>                   
+                </article>
+                <i class="fa-solid fa-chevron-right main__section--arrow"></i>   
+                
+            </div>
+        </section>
+    </main>
     
     <footer class="footer">
         <section class="footer__article"> 
@@ -42,13 +181,15 @@
             <h4>¿Dónde estamos?</h4>
             <a href="#" class="footer__section--location">
                 <i class="fa-solid fa-location-dot footer__section--iconLocation"></i>
-                <p class="footer__section--pLocation ">EL MATEADOR </p>
+                <p class="footer__section--pLocation">EL MATEADOR </p>
             </a>
         </section>    
 
-        <section> 
+        <section class="footer__article"> 
                 <p class="footer--author">Copyright El Mateador - Grupo 5 - 2024 / Proyecto Digital House -</p>
         </section>
     </footer>  
 </body>
 </html>
+
+  
