--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -16,7 +16,7 @@
 <body>
     <header class="header--main">
         <div class="header__div--logo">
-            <a href="http://localhost:3043/"><img class="header--logo" src="\images\banner1.jpg" alt="grupo5"></a>
+            <a href="http://localhost:3043/"><img class="header--logo" src="/images/logo.svg" alt="grupo5"></a>
         </div>
     </header>
     <main>
@@ -45,10 +45,10 @@
         </select>
 
         <div class="main__continuar">
-            <button class="main__continuar--button">Comprar ahora</button>
+            <a href="#"><button class="main__continuar--button">Comprar ahora</button></a>
         </div>
         <div class="main__continuar">
-            <button class="main__continuar--button">Agregar al carrito</button>
+            <a href=""><button class="main__continuar--button">Agregar al carrito</button></a>
         </div>
         <div>
             <h4 class="titles details">Mas detalles</h4>
